# MCP-Skill-Hub

./: .continueignore  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: ci.yml
app/: __init__.py  app.py
src/dynamic_mcp_skill_hub/: __init__.py  interceptor.py  main.py
src/dynamic_mcp_skill_hub/agent/: orchestrator.py
src/dynamic_mcp_skill_hub/codegen/: __init__.py  generator.py
src/dynamic_mcp_skill_hub/config/: settings.py
src/dynamic_mcp_skill_hub/execution/: __init__.py  sandbox_runner.py
src/dynamic_mcp_skill_hub/llm/: __init__.py  model_router.py
src/dynamic_mcp_skill_hub/mcp/: __init__.py  server.py
src/dynamic_mcp_skill_hub/models/: __init__.py  types.py
src/dynamic_mcp_skill_hub/research/: __init__.py  tavily.py
src/dynamic_mcp_skill_hub/specs/: __init__.py  normalizer.py
src/dynamic_mcp_skill_hub/storage/: __init__.py  registry.py
src/dynamic_mcp_skill_hub/ui/: __init__.py  activity.py  common.py  portal.py  settings.py  tools.py
src/dynamic_mcp_skill_hub/utils/: __init__.py  logging.py
src/dynamic_mcp_skill_hub/validation/: __init__.py  validator.py
src/dynamic_mcp_skill_hub/workflow/: __init__.py  graph.py  result.py
